# LED-Strip

arduino/: arduino.ino  sketch.json
client/: Cargo.toml
client/src/: main.rs
