[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
serialport = { version = "4.2.0", default-features = false }
tungstenite = "0.18.0"
url = "2.3.1"
bincode = "1.3.3"
serde = "1.0.152"
